--- a/phrases/index.html
+++ b/phrases/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Phrase List - Sign Rearranger</title>
-        <script src="words.js"></script>
+        <script src="../words.js"></script>
         <script>
             var tempWords;
             window.onload = function()
